--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/zentromall?retryWrites=true&w=majority
-JWT_SECRET=your_jwt_secret_key_here
+MONGO_URI=mongodb+srv://pasamvenkatabrahmendra:PVB25SRKRl@cluster0.xwerj5w.mongodb.net/ZentroMall
+
+JWT_SECRET=zentromall_secret_key_123
