--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "@stripe/react-stripe-js": "^2.2.0",
     "@stripe/stripe-js": "^2.0.0",
     "axios": "^1.13.2",
-    "next": "canary",
+    "next": "15.1.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
