--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
-    "razorpay": "^2.8.0",
-    "stripe": "^11.0.0",
-    "nodemailer": "^6.9.3"
+    "nodemailer": "^6.9.3",
+    "razorpay": "^2.9.6",
+    "stripe": "^11.0.0"
   },
   "devDependencies": {
     "jest": "^30.2.0",
