--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "razorpay": "^2.9.6",
-    "stripe": "^11.0.0"
+    "stripe": "^11.0.0",
+    "twilio": "^5.0.0"
   },
   "devDependencies": {
     "jest": "^30.2.0",
